	Documentation improved to make it clear that repeated-scheduled Steppables would
		simply terminate if their intervals eventually pushed them to beyond
		AFTER_SIMULATION.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	The -help flag in doLoop text modified to make it clear that the simulation would
		end when either -time or -until was completed even if the other one was not.
                Thanks to Rob Alexander <rob.alexander@york.ac.uk> and his class.
	SimpleInspector could reschedule itself even after the simulation had ended in
		unusual situations, resulting in an unexpected spurious but otherwise
		relatively harmless exception.  Thanks to Joey Harrison <jharri1@gmu.edu>
	Improvements to pie charting and bar charting facilities to allow tracking of
		Collections and also to set up BarChartingPropertyInspector as a subclass
		of PieChartChartingPropertyInspector.
	Extended ThreadedDiffuser in HeatBugs to handle any number of threads
	Added a "Redaw once at the next step" option to Display2D and 3D
	Added dashing constants to TimeSeriesAttributes
	Made public some methods in charting facility
	Added Network.getEdge and a new Network.getEdges
	Added Edge.setWeight
	Added Display[2|3]D.requestUpdate().  Thanks to Sadat Chowdhury <sadatc@gmail.com>
	LabelledPortrayal2D now handles multiline labels
	Added AbstractShapePortrayal2D, now the superclass of OvalPortrayal2D,
		RectanglePortrayal2D, ShapePortrayal2D, and HexagonalPortrayal2D.
	Additional methods provided for Heap.java
	Improvements to Console's frame rate slider
	ThreadPool now uses a linked list instead of a Bag, so it can add from the end
		and remove from the front, which hopefully keeps threads on different
		cores better associated with their hot memory (probably doesn't).
	Added replaceAll(...) and removeAll(...) methods, as appropriate, to 
		DoubleGrid[2|3]D, IntGrid[2|3]D, Object[2|3]D, and DenseGrid[2|3]D.